add github button

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -22,3 +22,10 @@
   margin: 0 calc(-1 * var(--ifm-pre-padding));
   padding: 0 var(--ifm-pre-padding);
 }
+
+/* Hide GitHub button on mobile */
+@media screen and (max-width: 996px) {
+  .github-button-wrapper {
+    display: none !important;
+  }
+}
